Minor fixes to previous commits
aka fix pipelines

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@44391 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c